# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.14 2007/05/15 09:22:07 gurligebis Exp $

*ZendFramework-0.9.3 (15 May 2007)

  15 May 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-0.9.0.ebuild, +ZendFramework-0.9.3.ebuild:
  Version bump.

*ZendFramework-0.9.0 (18 Mar 2007)

  18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
  -ZendFramework-0.8.0.ebuild, +ZendFramework-0.9.0.ebuild:
  Cleanup, version bump.

*ZendFramework-0.8.0 (25 Feb 2007)

  25 Feb 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  +ZendFramework-0.8.0.ebuild:
  Version bump.

*ZendFramework-0.2.0 (31 Oct 2006)

  31 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +ZendFramework-0.2.0.ebuild:
  Version bump.

  13 Sep 2006; Sebastian Bergmann <sebastian@gentoo.org>
  ZendFramework-0.1.5.ebuild:
  Use new license.

  12 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
  ZendFramework-0.1.5.ebuild:
  Keyword ~amd64.

*ZendFramework-0.1.5 (11 Jul 2006)

  11 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -ZendFramework-0.1.3.ebuild, -ZendFramework-0.1.4.ebuild,
  +ZendFramework-0.1.5.ebuild:
  Version bump.

*ZendFramework-0.1.4 (30 Jun 2006)

  30 Jun 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +ZendFramework-0.1.4.ebuild:
  Version bump.

  06 Jun 2006; Sebastian Bergmann <sebastian@gentoo.org>
  ZendFramework-0.1.3.ebuild:
  Use doc and examples USE flags, implements RFE 135800. Patch by Bjarke
  Istrup Pedersen <gurligebis@gentoo.org>.

  06 Jun 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -ZendFramework-0.1.2.ebuild:
  Remove old version.

  28 Apr 2006; Sebastian Bergmann <sebastian@gentoo.org>
  ZendFramework-0.1.2.ebuild, ZendFramework-0.1.3.ebuild:
  LICENSE="ZendFramework" -> LICENSE="ZendFramework-1.0"

*ZendFramework-0.1.3 (19 Apr 2006)
