@@ -1,16 +1,16 @@
-DIST ZendFramework-0.9.3-Beta.tar.gz 11448924 RMD160 ba45040328341c34a8b5acf20b909b1c37f48b4d SHA1 66353da004965ec3c8af5de39c2c38be885e4eb8 SHA256 8fd6b50c265e82187975950481159abf0061f29fbfd385b5e8535235fc26793a
-EBUILD ZendFramework-0.9.3.ebuild 1228 RMD160 d2bb1ab97c788a09ecae43a3aa207f49c9dafaad SHA1 77fe24bd19461694a5d2663a24512c1b604beeb7 SHA256 0c37d193d2b08a908c15fab60723df6dc3277e6394a0dc992d00609dea79fa58
-MD5 e5a859b7731686532bcaf274272c1195 ZendFramework-0.9.3.ebuild 1228
-RMD160 d2bb1ab97c788a09ecae43a3aa207f49c9dafaad ZendFramework-0.9.3.ebuild 1228
-SHA256 0c37d193d2b08a908c15fab60723df6dc3277e6394a0dc992d00609dea79fa58 ZendFramework-0.9.3.ebuild 1228
-MISC ChangeLog 2383 RMD160 c3bfe9ccfbd6268db690ab07b6feb82908312e53 SHA1 be96a28e26cc346e09667c761caed7feff822b3d SHA256 390269199f0a8feb092ef122c2bf7a6dd3ea0123c84cfa65b675e1ef28efae9d
-MD5 3748f23cdb56c11afd9a3702b63820da ChangeLog 2383
-RMD160 c3bfe9ccfbd6268db690ab07b6feb82908312e53 ChangeLog 2383
-SHA256 390269199f0a8feb092ef122c2bf7a6dd3ea0123c84cfa65b675e1ef28efae9d ChangeLog 2383
+DIST ZendFramework-1.0.0-RC1.tar.gz 12802911 RMD160 2ecc3c2d3542d9b95a4b372ea599ae3a75f2cde1 SHA1 9cf2b6c87f9e55140e57ff305f3b8c3a8e82ad2f SHA256 d3a18c98c503a619d1d27fb052c714d7e34371dfbe40a387764f5f93d2e4890a
+EBUILD ZendFramework-1.0.0_rc1.ebuild 1244 RMD160 be47b50952e3905b5cbb485514922a7dd0002847 SHA1 c2235de4f695ac68b5c3cd889359f3fde7f07cb8 SHA256 e29a96bdd53f2089a7f95ac6a41552a6b4e540fa85834f41d744cbf6e259de16
+MD5 a14826b96179f0db0f1b034d54eb4abc ZendFramework-1.0.0_rc1.ebuild 1244
+RMD160 be47b50952e3905b5cbb485514922a7dd0002847 ZendFramework-1.0.0_rc1.ebuild 1244
+SHA256 e29a96bdd53f2089a7f95ac6a41552a6b4e540fa85834f41d744cbf6e259de16 ZendFramework-1.0.0_rc1.ebuild 1244
+MISC ChangeLog 2566 RMD160 98a682a5b8aa6e3f658f2aa4e668fa85bb64b62b SHA1 e5d0f6ca5afe49dbdf48f914f779c5214d57a742 SHA256 7c04a77a36d517e159a6d101b7813a4d7e3df274d657aef9d5b6eb6948afde07
+MD5 1178e4f4999c5e3c40c1fde39b87dad2 ChangeLog 2566
+RMD160 98a682a5b8aa6e3f658f2aa4e668fa85bb64b62b ChangeLog 2566
+SHA256 7c04a77a36d517e159a6d101b7813a4d7e3df274d657aef9d5b6eb6948afde07 ChangeLog 2566
 MISC metadata.xml 263 RMD160 b5db218ec7332489f7ed15f1d915ffbcabae8416 SHA1 3405c272085c754dfcfe801d1e5bb567ea8455dd SHA256 839b9d9ccf46b287166f7245776ad13532a5112eff6a44c9aa0c5cc0f82c7cc9
 MD5 41a477ae0d65b6001d9c7d0b7a720d4a metadata.xml 263
 RMD160 b5db218ec7332489f7ed15f1d915ffbcabae8416 metadata.xml 263
 SHA256 839b9d9ccf46b287166f7245776ad13532a5112eff6a44c9aa0c5cc0f82c7cc9 metadata.xml 263
-MD5 361f27cdc0ad71be487a2b38a855ca42 files/digest-ZendFramework-0.9.3 280
-RMD160 4c0f91ba163807b6f2f1f9755c3ab0fa7197295d files/digest-ZendFramework-0.9.3 280
-SHA256 11b72c1b425c4e392376d68fcafcf9c5efc736dceaa37f609908124c36e8cecf files/digest-ZendFramework-0.9.3 280
+MD5 9540ad377cd5ebeaa6c794eb7dc7641a files/digest-ZendFramework-1.0.0_rc1 277
+RMD160 bade997715c579864577320fa0b744466bba682b files/digest-ZendFramework-1.0.0_rc1 277
+SHA256 19a9fd5a9e88a33a975fa50c0e2be78fa1db3cd63f7cf7f9bf41465bf9c426b6 files/digest-ZendFramework-1.0.0_rc1 277
