@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ZendFramework-0.9.3.ebuild,v 1.1 2007/05/15 09:22:07 gurligebis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ZendFramework-1.0.0_rc1.ebuild,v 1.1 2007/06/05 23:05:04 gurligebis Exp $
 
 PHP_LIB_NAME="Zend"
 
@@ -10,7 +10,7 @@ KEYWORDS="~amd64 ~x86"
 
 DESCRIPTION="Zend Framework is a high quality and open source framework for developing Web Applications and Web Services with PHP 5."
 HOMEPAGE="http://framework.zend.com/"
-SRC_URI="http://framework.zend.com/releases/${P}-Beta.tar.gz"
+SRC_URI="http://framework.zend.com/releases/${PN}-1.0.0-RC1.tar.gz"
 LICENSE="ZendFramework-1.1"
 SLOT="0"
 IUSE="doc examples"
@@ -18,7 +18,7 @@ IUSE="doc examples"
 DEPEND=""
 RDEPEND=""
 
-S="${WORKDIR}/${P}-Beta"
+S="${WORKDIR}/${PN}-1.0.0-RC1"
 
 need_php_by_category
 
