@@ -1,3 +1,0 @@
-MD5 93c409958a201c0120c057a4e08155db ZendFramework-0.9.3-Beta.tar.gz 11448924
-RMD160 ba45040328341c34a8b5acf20b909b1c37f48b4d ZendFramework-0.9.3-Beta.tar.gz 11448924
-SHA256 8fd6b50c265e82187975950481159abf0061f29fbfd385b5e8535235fc26793a ZendFramework-0.9.3-Beta.tar.gz 11448924
