@@ -1,0 +1,3 @@
+MD5 3876e70dc74e4960681f67946cc37f2a ZendFramework-1.0.0-RC1.tar.gz 12802911
+RMD160 2ecc3c2d3542d9b95a4b372ea599ae3a75f2cde1 ZendFramework-1.0.0-RC1.tar.gz 12802911
+SHA256 d3a18c98c503a619d1d27fb052c714d7e34371dfbe40a387764f5f93d2e4890a ZendFramework-1.0.0-RC1.tar.gz 12802911
