@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/ZendFramework
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.14 2007/05/15 09:22:07 gurligebis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.15 2007/06/05 23:05:04 gurligebis Exp $
+
+*ZendFramework-1.0.0_rc1 (06 Jun 2007)
+
+  06 Jun 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
+  -ZendFramework-0.9.3.ebuild, +ZendFramework-1.0.0_rc1.ebuild:
+  Version bump.
 
 *ZendFramework-0.9.3 (15 May 2007)
 
